fixtures/errors/group_by_non_iterable.js
const result = Object.groupBy(null, x => x);
